dark mode background color error fixed

--- a/src/components/styles/cardsyntax.css
+++ b/src/components/styles/cardsyntax.css
@@ -1,8 +1,3 @@
-body {
-  text-align: center;
-  background-color: #EFEFEF;
-}
-
 .pokemon-container {
   margin-bottom: 55px;
 }
@@ -46,7 +41,7 @@ body {
   text-transform: capitalize;
   padding: 15px 78px;
   border-radius: 60px;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
   background-color: white;
 }
 
